--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=Baloo+2:wght@500;700&family=Playfair+Display:wght@700&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Baloo+2:wght@600&family=Playfair+Display:wght@700&display=swap" rel="stylesheet" />
+
   <style>
     * {
-      box-sizing: border-box;
       margin: 0;
       padding: 0;
+      box-sizing: border-box;
     }
 
     body {
@@ -19,33 +20,56 @@
       display: flex;
       align-items: center;
       justify-content: center;
-      background:
-        radial-gradient(circle at 10% 0%, rgba(255, 194, 222, 0.90), transparent 60%),
-        radial-gradient(circle at 90% 100%, rgba(94, 129, 255, 0.95), transparent 60%),
-        linear-gradient(135deg, #ffb6e6, #ffd6e8, #d0e2ff, #243b82);
-      background-size: 200% 200%;
-      animation: bg-move 18s ease-in-out infinite;
-      font-family: "Baloo 2", system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
+      background: linear-gradient(135deg, #ffb6dc, #ffdff1, #ffd6e6, #ffeef8);
+      background-size: 250% 250%;
+      animation: bgMove 14s ease-in-out infinite;
+      font-family: "Baloo 2", cursive, system-ui;
       overflow: hidden;
       color: #fff;
     }
 
+    @keyframes bgMove {
+      0% { background-position: 0% 40%; }
+      50% { background-position: 100% 60%; }
+      100% { background-position: 0% 40%; }
+    }
+
+    .petal {
+      position: fixed;
+      top: -10vh;
+      font-size: 1.6rem;
+      opacity: 0.85;
+      animation: fall linear infinite;
+      pointer-events: none;
+    }
+
+    @keyframes fall {
+      0% {
+        transform: translateY(-10vh) translateX(0) rotate(0deg);
+      }
+      100% {
+        transform: translateY(120vh) translateX(20vw) rotate(360deg);
+      }
+    }
+
     .wrapper {
       position: relative;
+      z-index: 2;
       width: 100%;
-      max-width: 520px;
+      max-width: 560px;
       padding: 24px;
     }
 
     .card {
       position: relative;
-      border-radius: 28px;
-      padding: 36px 26px 30px;
-      background: rgba(12, 10, 40, 0.78);
+      border-radius: 32px;
+      padding: 40px 28px 32px;
+      background: rgba(255, 240, 248, 0.2);
+      border: 1px solid rgba(255, 255, 255, 0.4);
+      backdrop-filter: blur(16px);
       box-shadow:
-        0 28px 80px rgba(0, 0, 0, 0.7),
-        0 0 0 1px rgba(255, 255, 255, 0.08);
-      backdrop-filter: blur(20px);
+        0 22px 55px rgba(0, 0, 0, 0.45),
+        0 0 20px rgba(255, 255, 255, 0.5);
       text-align: center;
       overflow: hidden;
     }
@@ -56,216 +80,121 @@
       inset: -1px;
       border-radius: inherit;
       padding: 1px;
-      background:
-        conic-gradient(
-          from 210deg,
-          rgba(255, 255, 255, 0.0),
-          rgba(255, 255, 255, 0.55),
-          rgba(255, 255, 255, 0.0),
-          rgba(255, 255, 255, 0.35),
-          rgba(255, 255, 255, 0.0)
-        );
-      mask:
-        linear-gradient(#000 0 0) content-box,
-        linear-gradient(#000 0 0);
+      background: conic-gradient(
+        from 200deg,
+        rgba(255, 255, 255, 0.1),
+        rgba(255, 255, 255, 0.4),
+        rgba(255, 255, 255, 0.1),
+        rgba(255, 255, 255, 0.3)
+      );
+      mask: linear-gradient(#000 0 0) content-box, linear-gradient(#000 0 0);
       mask-composite: exclude;
       pointer-events: none;
     }
 
-    .halo {
+    .sakura-bg {
       position: absolute;
-      inset: -40%;
-      background:
-        radial-gradient(circle at 20% 0%, rgba(255, 237, 248, 0.10), transparent 60%),
-        radial-gradient(circle at 80% 100%, rgba(209, 224, 255, 0.18), transparent 60%);
-      opacity: 0.9;
+      inset: 0;
+      background-image: url("https://i.imgur.com/A7e9H1k.png");
+      background-size: cover;
+      background-position: center;
+      opacity: 0.20;
       pointer-events: none;
     }
 
-    .logo {
+    .title {
       position: relative;
-      font-family: "Playfair Display", "Baloo 2", system-ui, sans-serif;
-      font-size: clamp(2.1rem, 4.5vw, 3.2rem);
-      line-height: 1.05;
+      font-family: "Playfair Display", serif;
+      font-size: clamp(2.4rem, 6vw, 3.4rem);
       letter-spacing: 0.06em;
       margin-bottom: 12px;
-      text-transform: uppercase;
-      background: linear-gradient(120deg, #ffe5f5, #fff2b3, #ffe2ff, #d3e3ff);
+      background: linear-gradient(120deg, #ffffff, #ffe9f6, #fff8d6);
       -webkit-background-clip: text;
       background-clip: text;
       color: transparent;
       text-shadow:
-        0 0 16px rgba(0, 0, 0, 0.7),
-        0 0 32px rgba(255, 255, 255, 0.45);
+        0 0 18px rgba(0, 0, 0, 0.6),
+        0 0 28px rgba(255, 255, 255, 0.55);
     }
 
     .tagline {
-      position: relative;
-      display: inline-flex;
-      align-items: center;
-      justify-content: center;
-      gap: 6px;
       margin-top: 6px;
+      display: inline-block;
+      padding: 8px 18px;
       border-radius: 999px;
-      padding: 7px 16px;
-      font-size: 0.95rem;
-      text-transform: lowercase;
-      letter-spacing: 0.18em;
-      background: linear-gradient(120deg, rgba(255, 255, 255, 0.12), rgba(255, 255, 255, 0.22));
+      background: rgba(255, 255, 255, 0.28);
       border: 1px solid rgba(255, 255, 255, 0.6);
+      backdrop-filter: blur(8px);
+      font-size: 1rem;
+      text-transform: lowercase;
+      letter-spacing: 0.25em;
       box-shadow:
-        0 10px 26px rgba(0, 0, 0, 0.65),
-        0 0 10px rgba(255, 255, 255, 0.6);
+        0 10px 25px rgba(0, 0, 0, 0.4),
+        0 0 12px rgba(255, 255, 255, 0.6);
     }
 
-    .tagline span {
-      transform: translateY(0.5px);
-    }
-
-    .emoji-row {
-      position: relative;
-      margin-top: 24px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      gap: 18px;
-      font-size: 1.4rem;
-    }
-
-    .emoji-pill {
-      border-radius: 999px;
-      padding: 8px 14px;
-      background: radial-gradient(circle at 20% 0%, rgba(255, 255, 255, 0.26), transparent 55%);
-      border: 1px solid rgba(255, 255, 255, 0.35);
-      box-shadow:
-        0 12px 30px rgba(0, 0, 0, 0.6),
-        0 0 16px rgba(255, 255, 255, 0.5);
-    }
-
+    /* Sakura decorative stickers */
     .sticker {
       position: absolute;
-      display: inline-flex;
-      align-items: center;
-      justify-content: center;
-      border-radius: 999px;
-      background: radial-gradient(circle at 30% 20%, #fffaf4, #ffd6e8);
-      box-shadow:
-        0 12px 30px rgba(0, 0, 0, 0.65),
-        0 0 18px rgba(255, 255, 255, 0.6);
-      font-size: 1.6rem;
-      width: 60px;
-      height: 60px;
-      transform-origin: center;
-      animation: float 14s ease-in-out infinite;
+      width: 70px;
+      height: 70px;
+      opacity: 0.9;
+      animation: floatSticker ease-in-out infinite;
+      filter: drop-shadow(0 6px 14px rgba(0,0,0,0.4));
     }
 
-    .sticker:nth-of-type(1) {
-      top: -20px;
-      left: -8px;
-      transform: rotate(-12deg);
+    @keyframes floatSticker {
+      0% { transform: translateY(0) rotate(0deg); }
+      50% { transform: translateY(-8px) rotate(4deg); }
+      100% { transform: translateY(0) rotate(0deg); }
     }
 
-    .sticker:nth-of-type(2) {
-      top: -26px;
-      right: 6px;
-      background: radial-gradient(circle at 30% 20%, #f5f5ff, #d0e2ff);
-      animation-duration: 17s;
-      transform: rotate(10deg);
-    }
+    .st1 { top: -20px; left: -10px; animation-duration: 8s; }
+    .st2 { top: -30px; right: -8px; animation-duration: 10s; }
+    .st3 { bottom: -25px; left: 12px; animation-duration: 12s; }
+    .st4 { bottom: -25px; right: 12px; animation-duration: 14s; }
 
-    .sticker:nth-of-type(3) {
-      bottom: -22px;
-      left: 18px;
-      background: radial-gradient(circle at 40% 25%, #fffdf5, #ffe6f0);
-      animation-duration: 19s;
-      transform: rotate(7deg);
-    }
-
-    .sticker:nth-of-type(4) {
-      bottom: -28px;
-      right: 14px;
-      background: radial-gradient(circle at 30% 20%, #f5fbff, #d8e4ff);
-      animation-duration: 21s;
-      transform: rotate(-8deg);
-    }
-
-    .ring {
-      position: absolute;
-      inset: -60px;
-      border-radius: 999px;
-      border: 1px dashed rgba(255, 255, 255, 0.22);
-      opacity: 0.7;
-      pointer-events: none;
-      animation: ring-spin 30s linear infinite;
-    }
-
-    .ring::before {
-      content: "⭐️ ⭐️ ⭐️ ⭐️ ⭐️ ⭐️ ⭐️ ⭐️ ⭐️ ⭐️ ⭐️ ⭐️";
-      position: absolute;
-      inset: 18px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      font-size: 0.85rem;
-      letter-spacing: 0.35em;
-      opacity: 0.55;
-    }
-
-    @keyframes bg-move {
-      0% { background-position: 0% 40%; }
-      50% { background-position: 100% 60%; }
-      100% { background-position: 0% 40%; }
-    }
-
-    @keyframes float {
-      0% { transform: translate3d(0, 0, 0) scale(1) rotate(var(--r, 0deg)); }
-      50% { transform: translate3d(6px, -10px, 0) scale(1.06) rotate(calc(var(--r, 0deg) + 4deg)); }
-      100% { transform: translate3d(0, 0, 0) scale(1) rotate(var(--r, 0deg)); }
-    }
-
-    @keyframes ring-spin {
-      from { transform: rotate(0deg); }
-      to { transform: rotate(360deg); }
-    }
-
-    @media (max-width: 520px) {
+    @media(max-width: 520px) {
       .card {
-        padding: 30px 18px 26px;
+        padding: 32px 18px;
       }
-
       .sticker {
-        width: 54px;
-        height: 54px;
-      }
-
-      .ring::before {
-        font-size: 0.75rem;
+        width: 55px;
+        height: 55px;
       }
     }
   </style>
 </head>
+
 <body>
+
+  <!-- Floating animated petals -->
+  <script>
+    const PETALS = 18;
+    for (let i = 0; i < PETALS; i++) {
+      const p = document.createElement("div");
+      p.className = "petal";
+      p.style.left = Math.random() * 100 + "vw";
+      p.style.animationDuration = 9 + Math.random() * 6 + "s";
+      p.style.animationDelay = Math.random() * 6 + "s";
+      p.textContent = "🌸";
+      document.body.appendChild(p);
+    }
+  </script>
+
   <div class="wrapper">
     <div class="card">
-      <div class="halo"></div>
-      <div class="ring"></div>
+      <div class="sakura-bg"></div>
 
-      <div class="sticker">🌸</div>
-      <div class="sticker">✨</div>
-      <div class="sticker">🏰</div>
-      <div class="sticker">🎀</div>
+      <img class="sticker st1" src="https://i.imgur.com/R8VQdyA.png" alt="">
+      <img class="sticker st2" src="https://i.imgur.com/kcpZFRy.png" alt="">
+      <img class="sticker st3" src="https://i.imgur.com/Nx4GmV8.png" alt="">
+      <img class="sticker st4" src="https://i.imgur.com/kcpZFRy.png" alt="">
 
-      <h1 class="logo">Mimo Mimi Mimita</h1>
-
-      <div class="tagline">
-        <span>coming soon</span>
-      </div>
-
-      <div class="emoji-row">
-        <div class="emoji-pill">🌸🎎🇯🇵</div>
-        <div class="emoji-pill">🎡✨🇪🇺</div>
-      </div>
+      <h1 class="title">Mimo Mimi Mimita</h1>
+      <div class="tagline">coming soon</div>
     </div>
   </div>
+
 </body>
 </html>
