--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
       p.style.left = Math.random() * 100 + "vw";
       p.style.animationDuration = 9 + Math.random() * 6 + "s";
       p.style.animationDelay = Math.random() * 6 + "s";
-      p.textContent = "🌸";
+      p.textContent = "🌸🧜‍♀️";
       document.body.appendChild(p);
     }
   </script>
