--- a/index.html
+++ b/index.html
@@ -20,10 +20,13 @@
       display: flex;
       align-items: center;
       justify-content: center;
-      background: linear-gradient(135deg, #ffb6dc, #ffdff1, #ffd6e6, #ffeef8);
-      background-size: 250% 250%;
+      background:
+        radial-gradient(circle at 0% 0%, #ffe2f3 0, transparent 55%),
+        radial-gradient(circle at 100% 100%, #ffd3ea 0, transparent 55%),
+        linear-gradient(135deg, #ffb6dc, #ffdff1, #ffd6e6, #ffeef8);
+      background-size: 220% 220%;
       animation: bgMove 14s ease-in-out infinite;
-      font-family: "Baloo 2", cursive, system-ui;
+      font-family: "Baloo 2", system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
       overflow: hidden;
       color: #fff;
     }
@@ -34,11 +37,12 @@
       100% { background-position: 0% 40%; }
     }
 
+    /* Floating sakura petals made with emojis */
     .petal {
       position: fixed;
       top: -10vh;
       font-size: 1.6rem;
-      opacity: 0.85;
+      opacity: 0.9;
       animation: fall linear infinite;
       pointer-events: none;
     }
@@ -64,12 +68,12 @@
       position: relative;
       border-radius: 32px;
       padding: 40px 28px 32px;
-      background: rgba(255, 240, 248, 0.2);
-      border: 1px solid rgba(255, 255, 255, 0.4);
+      background: rgba(255, 240, 248, 0.3);
+      border: 1px solid rgba(255, 255, 255, 0.6);
       backdrop-filter: blur(16px);
       box-shadow:
         0 22px 55px rgba(0, 0, 0, 0.45),
-        0 0 20px rgba(255, 255, 255, 0.5);
+        0 0 20px rgba(255, 255, 255, 0.6);
       text-align: center;
       overflow: hidden;
     }
@@ -85,21 +89,52 @@
         rgba(255, 255, 255, 0.1),
         rgba(255, 255, 255, 0.4),
         rgba(255, 255, 255, 0.1),
-        rgba(255, 255, 255, 0.3)
+        rgba(255, 255, 255, 0.35)
       );
       mask: linear-gradient(#000 0 0) content-box, linear-gradient(#000 0 0);
       mask-composite: exclude;
       pointer-events: none;
     }
 
-    .sakura-bg {
+    /* Abstract sakura-tree-like shapes with pure CSS */
+    .sakura-layer {
       position: absolute;
-      inset: 0;
-      background-image: url("https://i.imgur.com/A7e9H1k.png");
-      background-size: cover;
-      background-position: center;
-      opacity: 0.20;
+      inset: -40%;
+      background:
+        radial-gradient(circle at 10% 80%, rgba(255, 190, 221, 0.65), transparent 60%),
+        radial-gradient(circle at 80% 20%, rgba(255, 210, 238, 0.75), transparent 60%),
+        radial-gradient(circle at 30% 10%, rgba(255, 240, 252, 0.8), transparent 60%),
+        radial-gradient(circle at 100% 100%, rgba(255, 215, 233, 0.6), transparent 55%);
+      opacity: 0.9;
       pointer-events: none;
+    }
+
+    .branch {
+      position: absolute;
+      width: 220%;
+      height: 220%;
+      border-radius: 50%;
+      border: 2px solid rgba(140, 92, 82, 0.18);
+      transform-origin: center;
+      pointer-events: none;
+    }
+
+    .branch--1 {
+      top: 40%;
+      left: -70%;
+      transform: rotate(-8deg);
+    }
+
+    .branch--2 {
+      top: -60%;
+      right: -80%;
+      transform: rotate(18deg);
+    }
+
+    .branch--3 {
+      bottom: -75%;
+      left: -50%;
+      transform: rotate(-22deg);
     }
 
     .title {
@@ -118,8 +153,12 @@
     }
 
     .tagline {
+      position: relative;
       margin-top: 6px;
-      display: inline-block;
+      display: inline-flex;
+      align-items: center;
+      justify-content: center;
+      gap: 8px;
       padding: 8px 18px;
       border-radius: 999px;
       background: rgba(255, 255, 255, 0.28);
@@ -133,34 +172,50 @@
         0 0 12px rgba(255, 255, 255, 0.6);
     }
 
-    /* Sakura decorative stickers */
+    .tagline::before,
+    .tagline::after {
+      content: "🌸";
+      font-size: 1.1rem;
+    }
+
+    /* Little glowing sakura “stickers” */
     .sticker {
       position: absolute;
       width: 70px;
       height: 70px;
-      opacity: 0.9;
+      border-radius: 50%;
+      background:
+        radial-gradient(circle at 30% 20%, #fffaf9, #ffd2ea);
+      box-shadow:
+        0 12px 28px rgba(0, 0, 0, 0.5),
+        0 0 18px rgba(255, 255, 255, 0.8);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-size: 1.7rem;
       animation: floatSticker ease-in-out infinite;
-      filter: drop-shadow(0 6px 14px rgba(0,0,0,0.4));
+      pointer-events: none;
     }
+
+    .sticker--1 { top: -18px; left: -6px; animation-duration: 8s; }
+    .sticker--2 { top: -26px; right: 4px; animation-duration: 11s; }
+    .sticker--3 { bottom: -22px; left: 18px; animation-duration: 13s; }
+    .sticker--4 { bottom: -26px; right: 12px; animation-duration: 15s; }
 
     @keyframes floatSticker {
-      0% { transform: translateY(0) rotate(0deg); }
-      50% { transform: translateY(-8px) rotate(4deg); }
-      100% { transform: translateY(0) rotate(0deg); }
+      0% { transform: translateY(0) scale(1); }
+      50% { transform: translateY(-8px) scale(1.06); }
+      100% { transform: translateY(0) scale(1); }
     }
 
-    .st1 { top: -20px; left: -10px; animation-duration: 8s; }
-    .st2 { top: -30px; right: -8px; animation-duration: 10s; }
-    .st3 { bottom: -25px; left: 12px; animation-duration: 12s; }
-    .st4 { bottom: -25px; right: 12px; animation-duration: 14s; }
-
-    @media(max-width: 520px) {
+    @media (max-width: 520px) {
       .card {
         padding: 32px 18px;
       }
       .sticker {
-        width: 55px;
-        height: 55px;
+        width: 56px;
+        height: 56px;
+        font-size: 1.4rem;
       }
     }
   </style>
@@ -168,7 +223,7 @@
 
 <body>
 
-  <!-- Floating animated petals -->
+  <!-- Floating petals (created with JS so we don't clutter HTML) -->
   <script>
     const PETALS = 18;
     for (let i = 0; i < PETALS; i++) {
@@ -177,14 +232,22 @@
       p.style.left = Math.random() * 100 + "vw";
       p.style.animationDuration = 9 + Math.random() * 6 + "s";
       p.style.animationDelay = Math.random() * 6 + "s";
-      p.textContent = "🌸🧜‍♀️";
+      p.textContent = "🌸";
       document.body.appendChild(p);
     }
   </script>
 
   <div class="wrapper">
     <div class="card">
-      <div class="sakura-bg"></div>
+      <div class="sakura-layer"></div>
+      <div class="branch branch--1"></div>
+      <div class="branch branch--2"></div>
+      <div class="branch branch--3"></div>
+
+      <div class="sticker sticker--1">✨</div>
+      <div class="sticker sticker--2">🌸</div>
+      <div class="sticker sticker--3">⭐️</div>
+      <div class="sticker sticker--4">💫</div>
 
       <h1 class="title">Mimo Mimi Mimita</h1>
       <div class="tagline">coming soon</div>
